k8s/ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-service
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - protocol: "TCP"
      port: 3000
      targetPort: 3000
